<?xml version="1.0"?>
<package format="2">
  <name>rnd_ka3005p</name>
  <version>1.0.0</version>
  <description>RND KA3005P driver</description>

  <maintainer email="sami.pukkila@gmail.com">Sami Pukkila</maintainer>

  <license>MIT</license>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>

  <export>
  </export>
</package>
